# tendril

./: .gitignore  fourmolu.yaml  tendril.cabal
app/: Document.hs  Dossier.hs  Eval.hs  Main.hs  Render.hs  Syntax.hs
app/Data/: Source.hs
app/Document/: Config.hs
app/Dossier/: Document.hs  DocumentTree.hs
app/Dossier/Document/: Config.hs
app/Eval/: Error.hs
app/Parser/: Error.hs  Internal.hs  Lexer.x  Token.hs
app/Render/: Error.hs  Latex.hs  Settings.hs
app/Syntax/: Parser.y
app/Syntax/Parser/: Error.hs  Group.hs  Internal.hs  Lexer.x  Token.hs
resources/styles/: verdant.css
