cabal-version:      3.0
name:               tendril
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable tendril
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Data.Source,
        Syntax,
        Syntax.Parser.Token,
        Syntax.Parser.Error,
        Syntax.Parser.Internal,
        Syntax.Parser.Lexer,
    build-depends:    
        base ^>=4.17.2.1,
        mtl,
        free,
        text,
        array,
        bytestring,
        monad-loops,
        pretty,
        dhall
    build-tool-depends:
        alex:alex,
        happy:happy
    default-extensions:
        RecordWildCards,
        TupleSections,
        BangPatterns,
        MultiParamTypeClasses,
        LambdaCase,
        OverloadedStrings
    hs-source-dirs:   app
    default-language: Haskell2010
