cabal-version:      3.0
name:               tendril
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable tendril
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Data.Source,
        Syntax,
        Syntax.Parser,
        Syntax.Parser.Group,
        Syntax.Parser.Error,
        Syntax.Parser.Token,
        Syntax.Parser.Internal,
        Syntax.Parser.Lexer
    build-depends:    
        base ^>=4.17.2.1,
        effectful,
        effectful-core,
        effectful-plugin,
        text,
        array,
        vector,
        bytestring
    build-tool-depends:
        alex:alex,
        happy:happy
    default-extensions:
        RecordWildCards,
        LambdaCase,
        OverloadedStrings,
        DataKinds
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -fplugin=Effectful.Plugin
